--- a/day7-travelPage/style.css
+++ b/day7-travelPage/style.css
@@ -68,6 +68,7 @@ button {
 }
 
 .navlinks a {
+  /* hovers need to be added */
   font-size: 1.2rem;
   margin: 5px 0;
   padding: 15px 0px;
@@ -88,6 +89,7 @@ button {
 }
 
 .contact a {
+  /* hovers need to be added */
   font-size: 1.2rem;
   padding: 15px 0px;
 }
@@ -97,6 +99,7 @@ button {
 }
 
 .hero-container {
+  /* background image to be added */
   background-color: #ef8c86;
   display: flex;
   flex-direction: column;
@@ -156,3 +159,5 @@ button {
 
   padding: 25px;
 }
+
+/* reservation section to be completed */
