--- a/day11-formPage/style.css
+++ b/day11-formPage/style.css
@@ -82,6 +82,7 @@ li {
 form {
   background-color: rgba(250, 250, 250, 0.3);
   border-radius: 25px;
+  /* add a box-shadow */
   width: 50%;
   margin: 0 auto;
   display: flex;
@@ -101,12 +102,16 @@ form {
 
 input,
 select {
+  /* change the background-color */
   outline: none;
   width: 40%;
   border: none;
+  /* style borders with a more minimalistic look */
   border-radius: 10px;
   padding: 5px;
 }
+
+/* target placeholder with the ::placeholder pseudo-element */
 
 .flex-column {
   display: flex;
@@ -118,6 +123,7 @@ select {
   border-radius: 10px;
   padding: 10px 20px;
   background-color: none;
+  /* change background-color */
   width: 20%;
   transition: background-color 0.15s;
 }
