This is my commentary and review on my progress for day 14.

--- a/day14-recipePage/style.css
+++ b/day14-recipePage/style.css
@@ -107,3 +107,7 @@ ol li {
   align-items: center;
   width: 70%;
 }
+
+/* spacing between ingredients and method is needed */
+
+/* .ingredinets h3 needs a margin bottom */
